# repo01

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Documentos.md/descritivos_doc/: index.html
Leg.md/descritivos_leg/: index.html
blog/: index.html
blog/2023/12/31/celebração-do-contrato-concluída/: index.html
blog/archive/2023/: index.html
docs/: documentos.md  index.md  legislacao.md
docs/Leg.md/: descritivos_leg.md
docs/blog/: index.md
docs/blog/posts/: primeiro_post2.md
docs/documentos.md/: descritivos_docs.md
documentos/: index.html
documentos.md/descritivos_docs/: index.html
legislacao/: index.html
legislacao.md/descritivos_leg/: index.html
search/: search_index.json
