[tool.poetry]
name = "repo01"
version = "0.1.0"
description = ""
authors = ["Gabriela Ribeiro <gabrieladsribeiro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.18"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
